# accounting_rust_rest_api

./: .env  Cargo.toml  README.md
migrations/2020-10-29-060424_create_users/: up.sql
migrations/2020-10-29-065419_create_roles/: up.sql
migrations/2020-10-29-065808_create_users_roles/: down.sql  up.sql
migrations/2020-10-29-070135_create_privileges/: down.sql  up.sql
migrations/2020-10-29-070222_create_roles_privileges/: down.sql  up.sql
migrations/2020-10-29-070427_create_document_types/: down.sql  up.sql
migrations/2020-10-29-070521_create_companies/: down.sql  up.sql
migrations/2020-10-29-070740_create_documents/: down.sql  up.sql
migrations/2020-10-29-071352_create_units/: down.sql  up.sql
migrations/2020-10-29-071402_create_currencies/: down.sql  up.sql
migrations/2020-10-29-071409_create_currencies_measurements/: down.sql  up.sql
migrations/2020-10-29-071421_create_products/: down.sql  up.sql
migrations/2020-10-29-112232_create_document_items/: down.sql  up.sql
src/: main.rs  schema.rs  test.rs
src/controllers/: company_controller.rs  currency_controller.rs  document_controller.rs  document_type_controller.rs  mod.rs  privilege_controller.rs  role_controller.rs  unit_controller.rs  user_controller.rs
src/middlewares/: auth.rs
src/models/: company.rs  currency.rs  currency_measurement.rs  document.rs  document_item.rs  document_type.rs  mod.rs  privilege.rs  product.rs  role.rs  role_privilege.rs  unit.rs  user.rs  user_role.rs
src/repository/: company_repository.rs  currency_repository.rs  document_item_repository.rs  macros.rs  (+9 more)
(+3 files in other folders)
