[package]
name = "accounting_rest_api"
version = "0.1.0"
authors = ["an <ghostly.man256g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.7"
actix = "0.10.0"
actix-service = "1.0.6"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["numeric", "postgres", "chrono", "r2d2", "serde_json" ] }
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
rust-argon2 = "0.8"
env_logger = "0.8.1"
bigdecimal = { version = "0.1", features = ["serde"]}
